# brANPR

./: .gitignore  README.md
images/: summary.txt
src/: CMakeLists.txt  OCR.cpp  OCR.h  OCR.xml  SVM.xml  analyzer.cpp  analyzer.h  anprengine.cpp  anprengine.h  brANPR.pro  detectregions.cpp  detectregions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plate.cpp  plate.h  settingsdialog.cpp  settingsdialog.h  trainOCR.cpp  trainSVM.cpp  utils.cpp  utils.h
